--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
     <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
     <maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
     <maven-project-info-reports-plugin.version>2.7</maven-project-info-reports-plugin.version>
-    <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
+    <maven-release-plugin.version>2.4.2</maven-release-plugin.version>
     <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
     <maven-site-plugin.version>3.3</maven-site-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
@@ -328,6 +328,13 @@
           <artifactId>antlr3-maven-plugin</artifactId>
           <version>${antlr3-maven-plugin.version}</version>
         </plugin>
+
+        <plugin>
+          <groupId>com.soebes.maven.plugins</groupId>
+          <artifactId>maven-echo-plugin</artifactId>
+          <version>0.1</version>
+        </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
