--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -225,10 +228,8 @@
           <artifactId>maven-source-plugin</artifactId>
           <version>${maven-source-plugin.version}</version>
           <executions>
-             <!-- here we override the super-pom attach-sources execution id which
-                  calls sources:jar goal. That goals forks the lifecycle, causing
-                  the generate-sources phase to be called twice for the install goal.
-             -->
+            <!-- here we override the super-pom attach-sources execution id which calls sources:jar goal. That goals forks the lifecycle, 
+              causing the generate-sources phase to be called twice for the install goal. -->
             <execution>
               <id>attach-sources</id>
               <phase>DISABLE_FORKED_LIFECYCLE_MSOURCES-13</phase>
@@ -301,7 +302,7 @@
           <version>${maven-remote-resources-plugin.version}</version>
         </plugin>
 
-        <!--  Codehaus Plugins -->
+        <!-- Codehaus Plugins -->
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>appassembler-maven-plugin</artifactId>
@@ -322,7 +323,7 @@
           <artifactId>buildnumber-maven-plugin</artifactId>
           <version>${buildnumber-maven-plugin.version}</version>
         </plugin>
-        <!--  Other Plugins -->
+        <!-- Other Plugins -->
         <plugin>
           <groupId>org.antlr</groupId>
           <artifactId>antlr3-maven-plugin</artifactId>
@@ -471,16 +472,40 @@
         <artifactId>log4j</artifactId>
         <version>1.2.16</version>
       </dependency>
+
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>2.0-beta8</version>
+        <artifactId>log4j-api</artifactId>
+        <version>2.0-beta9</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.0-beta9</version>
+      </dependency>
+
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>15.0</version>
       </dependency>
+
+      <dependency>
+        <groupId>com.goldmansachs</groupId>
+        <artifactId>gs-collections</artifactId>
+        <version>4.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.goldmansachs</groupId>
+        <artifactId>gs-collections-testutils</artifactId>
+        <version>4.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.goldmansachs</groupId>
+        <artifactId>gs-collections-api</artifactId>
+        <version>4.2.0</version>
+      </dependency>
+
       <dependency>
         <groupId>com.beust</groupId>
         <artifactId>jcommander</artifactId>
