--- a/pom.xml
+++ b/pom.xml
@@ -59,33 +59,37 @@
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
+    <maven-ear-plugin.version>2.8</maven-ear-plugin.version>
+    <maven-ejb-plugin.version>2.3</maven-ejb-plugin.version>
     <maven-failsafe-plugin.version>2.16</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.5.1</maven-install-plugin.version>
-    <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-    <maven-ear-plugin.version>2.8</maven-ear-plugin.version>
-    <maven-war-plugin.version>2.4</maven-war-plugin.version>
-    <maven-shade-plugin.version>2.1</maven-shade-plugin.version>
     <maven-invoker-plugin.version>1.8</maven-invoker-plugin.version>
+    <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
     <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
-    <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
     <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
     <maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
     <maven-project-info-reports-plugin.version>2.7</maven-project-info-reports-plugin.version>
     <maven-release-plugin.version>2.4.2</maven-release-plugin.version>
+    <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
     <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
+    <maven-shade-plugin.version>2.1</maven-shade-plugin.version>
     <maven-site-plugin.version>3.3</maven-site-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
     <maven-surefire-report-plugin.version>2.16</maven-surefire-report-plugin.version>
+    <maven-war-plugin.version>2.4</maven-war-plugin.version>
 
     <!-- Codehaus Plugins -->
-    <appassembler-maven-plugin.version>1.5</appassembler-maven-plugin.version>
-    <cobertura-maven-plugin.version>2.6</cobertura-maven-plugin.version>
-    <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
-    <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
+    <appassembler-maven-plugin.version>1.7</appassembler-maven-plugin.version>
     <build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
     <buildnumber-maven-plugin.version>1.2</buildnumber-maven-plugin.version>
+    <cobertura-maven-plugin.version>2.6</cobertura-maven-plugin.version>
+    <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
+    <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
+    <license-maven-plugin.version>1.5</license-maven-plugin.version>
+    <templating-maven-plugin.version>1.0-alpha-3</templating-maven-plugin.version>
+    <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
 
     <!-- Other Plugins -->
     <antlr3-maven-plugin.version>3.5</antlr3-maven-plugin.version>
@@ -215,6 +219,26 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-ejb-plugin</artifactId>
+          <version>${maven-ejb-plugin.version}</version>
+          <configuration>
+            <archive>
+              <addMavenDescriptor>true</addMavenDescriptor>
+              <index>true</index>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+              </manifest>
+              <manifestEntries>
+                <artifactId>${project.artifactId}</artifactId>
+                <groupId>${project.groupId}</groupId>
+                <version>${project.version}</version>
+              </manifestEntries>
+            </archive>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
           <version>${maven-shade-plugin.version}</version>
         </plugin>
@@ -272,11 +296,6 @@
           <version>${maven-dependency-plugin.version}</version>
         </plugin>
         <plugin>
-          <groupId>com.mycila.maven-license-plugin</groupId>
-          <artifactId>maven-license-plugin</artifactId>
-          <version>${maven-license-plugin.version}</version>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>${maven-project-info-reports-plugin.version}</version>
@@ -323,17 +342,31 @@
           <artifactId>buildnumber-maven-plugin</artifactId>
           <version>${buildnumber-maven-plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>${license-maven-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>templating-maven-plugin</artifactId>
+          <version>${templating-maven-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>${exec-maven-plugin.version}</version>
+        </plugin>
         <!-- Other Plugins -->
         <plugin>
           <groupId>org.antlr</groupId>
           <artifactId>antlr3-maven-plugin</artifactId>
           <version>${antlr3-maven-plugin.version}</version>
         </plugin>
-
         <plugin>
-          <groupId>com.soebes.maven.plugins</groupId>
-          <artifactId>maven-echo-plugin</artifactId>
-          <version>0.1</version>
+          <groupId>com.mycila.maven-license-plugin</groupId>
+          <artifactId>maven-license-plugin</artifactId>
+          <version>${maven-license-plugin.version}</version>
         </plugin>
 
       </plugins>
