--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
   <url>https://github.com/khmarbaise/smpp</url>
   <inceptionYear>2011</inceptionYear>
 
+  <!-- This marked as deprecated for Maven 3.X. This is checked by maven-enforcer-plugin -->
   <prerequisites>
-    <maven>3.0</maven>
+    <maven>3.0.0</maven>
   </prerequisites>
 
   <organization>
@@ -79,6 +80,7 @@
     <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
     <maven-surefire-report-plugin.version>2.16</maven-surefire-report-plugin.version>
     <maven-war-plugin.version>2.4</maven-war-plugin.version>
+    <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
 
     <!-- Codehaus Plugins -->
     <appassembler-maven-plugin.version>1.7</appassembler-maven-plugin.version>
@@ -320,6 +322,11 @@
           <artifactId>maven-remote-resources-plugin</artifactId>
           <version>${maven-remote-resources-plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>${maven-enforcer-plugin.version}</version>
+        </plugin>
 
         <!-- Codehaus Plugins -->
         <plugin>
@@ -371,6 +378,27 @@
 
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>enforce-maven</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireMavenVersion>
+                  <version>3.0.0</version>
+                </requireMavenVersion>
+              </rules>    
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 
   <reporting>
