--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,10 @@
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.soebes.smpp</groupId>
   <artifactId>smpp</artifactId>
-  <version>0.6.3-SNAPSHOT</version>
+  <version>0.6.3</version>
   <packaging>pom</packaging>
 
   <name>SoEBeS Maven Parent POM</name>
@@ -108,7 +105,7 @@
     <developerConnection>scm:git:git@github.com:khmarbaise/smpp.git</developerConnection>
     <connection>scm:git:git://github.com/khmarbaise/smpp.git</connection>
     <url>http://khmarbaise.github.com/smpp/</url>
-    <tag>HEAD</tag>
+    <tag>smpp-0.6.3</tag>
   </scm>
 
   <distributionManagement>
