--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.soebes.smpp</groupId>
   <artifactId>smpp</artifactId>
-  <version>0.6.3</version>
+  <version>0.6.4-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>SoEBeS Maven Parent POM</name>
@@ -105,7 +105,7 @@
     <developerConnection>scm:git:git@github.com:khmarbaise/smpp.git</developerConnection>
     <connection>scm:git:git://github.com/khmarbaise/smpp.git</connection>
     <url>http://khmarbaise.github.com/smpp/</url>
-    <tag>smpp-0.6.3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
