--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,10 @@
   <inceptionYear>2011</inceptionYear>
 
   <!-- This marked as deprecated for Maven 3.X. This is checked by maven-enforcer-plugin -->
+  <!--  http://jira.codehaus.org/browse/MNG-4840 -->
+  <!--  http://jira.codehaus.org/browse/MNG-5297 -->
   <prerequisites>
-    <maven>3.0.0</maven>
+    <maven>${maven.version}</maven>
   </prerequisites>
 
   <organization>
@@ -93,6 +95,9 @@
     <!-- Other Plugins -->
     <antlr3-maven-plugin.version>3.5</antlr3-maven-plugin.version>
     <maven-license-plugin.version>1.9.0</maven-license-plugin.version>
+    <site-maven-plugin.version>0.9</site-maven-plugin.version>
+
+    <maven.version>3.0.0</maven.version>
 
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -378,6 +383,11 @@
           <artifactId>maven-license-plugin</artifactId>
           <version>${maven-license-plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>com.github.github</groupId>
+          <artifactId>site-maven-plugin</artifactId>
+          <version>${site-maven-plugin.version}</version>
+        </plugin>
 
       </plugins>
     </pluginManagement>
@@ -394,7 +404,7 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>3.0.0</version>
+                  <version>${maven.version}</version>
                 </requireMavenVersion>
               </rules>    
             </configuration>
@@ -545,12 +555,12 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
-        <version>2.0-beta9</version>
+        <version>2.0-rc1</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
-        <version>2.0-beta9</version>
+        <version>2.0-rc1</version>
       </dependency>
 
       <dependency>
@@ -578,7 +588,7 @@
       <dependency>
         <groupId>com.beust</groupId>
         <artifactId>jcommander</artifactId>
-        <version>1.32</version>
+        <version>1.36</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -688,7 +698,6 @@
           <plugin>
             <groupId>com.github.github</groupId>
             <artifactId>site-maven-plugin</artifactId>
-            <version>0.8</version>
             <configuration>
               <message>Creating site for ${project.version}</message>
               <server>github</server>
