--- a/pom.xml
+++ b/pom.xml
@@ -61,25 +61,32 @@
     <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
     <maven-ear-plugin.version>2.9</maven-ear-plugin.version>
     <maven-ejb-plugin.version>2.3</maven-ejb-plugin.version>
-    <maven-failsafe-plugin.version>2.16</maven-failsafe-plugin.version>
-    <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
+    <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.5.1</maven-install-plugin.version>
     <maven-invoker-plugin.version>1.8</maven-invoker-plugin.version>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
     <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
     <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
-    <maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
+    <maven-pmd-plugin.version>3.1</maven-pmd-plugin.version>
     <maven-project-info-reports-plugin.version>2.7</maven-project-info-reports-plugin.version>
     <maven-release-plugin.version>2.4.2</maven-release-plugin.version>
     <maven-remote-resources-plugin.version>1.5</maven-remote-resources-plugin.version>
     <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
     <maven-shade-plugin.version>2.2</maven-shade-plugin.version>
+
+    <!-- The following things belong together -->
     <maven-site-plugin.version>3.3</maven-site-plugin.version>
+    <wagon-ssh.version>2.4</wagon-ssh.version>
+
+    <!-- The following belong together -->
+    <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>2.17</maven-failsafe-plugin.version>
+    <maven-surefire-report-plugin.version>2.17</maven-surefire-report-plugin.version>
+
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.16</maven-surefire-report-plugin.version>
     <maven-war-plugin.version>2.4</maven-war-plugin.version>
     <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
+    <maven-checkstyle-plugin.version>2.12</maven-checkstyle-plugin.version>
 
     <!-- Codehaus Plugins -->
     <appassembler-maven-plugin.version>1.7</appassembler-maven-plugin.version>
@@ -88,7 +95,7 @@
     <cobertura-maven-plugin.version>2.6</cobertura-maven-plugin.version>
     <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
     <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
-    <license-maven-plugin.version>1.5</license-maven-plugin.version>
+    <license-maven-plugin.version>1.6</license-maven-plugin.version>
     <templating-maven-plugin.version>1.0-alpha-3</templating-maven-plugin.version>
     <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
 
@@ -97,7 +104,8 @@
     <maven-license-plugin.version>1.9.0</maven-license-plugin.version>
     <site-maven-plugin.version>0.9</site-maven-plugin.version>
 
-    <maven.version>3.0.0</maven.version>
+    <!-- The minimum maven version we expect to build with. -->
+    <maven.version>3.0.5</maven.version>
 
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -314,6 +322,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
           <version>${maven-site-plugin.version}</version>
+          <dependencies>
+            <!-- Add support for scp/ssh -->
+            <dependency>
+              <groupId>org.apache.maven.wagon</groupId>
+              <artifactId>wagon-ssh</artifactId>
+              <version>${wagon-ssh.version}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -334,6 +350,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>${maven-enforcer-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>${maven-checkstyle-plugin.version}</version>
         </plugin>
 
         <!-- Codehaus Plugins -->
@@ -403,6 +424,13 @@
             </goals>
             <configuration>
               <rules>
+                <requireSameVersions>
+                  <plugins>
+                    <plugin>org.apache.maven.plugins:maven-surefire-plugin</plugin>
+                    <plugin>org.apache.maven.plugins:maven-failsafe-plugin</plugin>
+                    <plugin>org.apache.maven.plugins:maven-surefire-report-plugin</plugin>
+                  </plugins>
+                </requireSameVersions>
                 <requireMavenVersion>
                   <version>${maven.version}</version>
                 </requireMavenVersion>
@@ -416,6 +444,15 @@
 
   <reporting>
     <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>${findbugs-maven-plugin.version}</version>
+        <configuration>
+          <xmlOutput>true</xmlOutput>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-changes-plugin</artifactId>
@@ -442,9 +479,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>${maven-surefire-report-plugin.version}</version>
-        <configuration>
-          <reportsDirectory>target/surefire-reports</reportsDirectory>
-        </configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>report-only</report>
+              <report>failsafe-report-only</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -511,6 +553,34 @@
           </reportSet>
         </reportSets>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>taglist-maven-plugin</artifactId>
+        <version>${taglist-maven-plugin.version}</version>
+        <configuration>
+          <aggregate>true</aggregate>
+          <tagListOptions>
+            <tagClasses>
+              <tagClass>
+                <displayName>Todo Work</displayName>
+                <tags>
+                  <tag>
+                    <matchString>todo</matchString>
+                    <matchType>ignoreCase</matchType>
+                  </tag>
+                </tags>
+              </tagClass>
+              <tagClass>
+                <displayName>FIXME WORK</displayName>
+                <tag>
+                  <matchString>FIXME</matchString>
+                  <matchType>exact</matchType>
+                </tag>
+              </tagClass>
+            </tagClasses>
+          </tagListOptions>
+        </configuration>
+      </plugin>
     </plugins>
   </reporting>
 
@@ -570,25 +640,9 @@
       </dependency>
 
       <dependency>
-        <groupId>com.goldmansachs</groupId>
-        <artifactId>gs-collections</artifactId>
-        <version>4.2.0</version>
-      </dependency>
-      <dependency>
-        <groupId>com.goldmansachs</groupId>
-        <artifactId>gs-collections-testutils</artifactId>
-        <version>4.2.0</version>
-      </dependency>
-      <dependency>
-        <groupId>com.goldmansachs</groupId>
-        <artifactId>gs-collections-api</artifactId>
-        <version>4.2.0</version>
-      </dependency>
-
-      <dependency>
         <groupId>com.beust</groupId>
         <artifactId>jcommander</artifactId>
-        <version>1.36</version>
+        <version>1.32</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -643,28 +697,6 @@
         </file>
       </activation>
       <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-site-plugin</artifactId>
-              <version>${maven-site-plugin.version}</version>
-              <dependencies>
-                <!-- Add support for scp/ssh -->
-                <dependency>
-                  <groupId>org.apache.maven.wagon</groupId>
-                  <artifactId>wagon-ssh</artifactId>
-                  <version>2.2</version>
-                </dependency>
-              </dependencies>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-project-info-reports-plugin</artifactId>
-              <version>${maven-project-info-reports-plugin.version}</version>
-            </plugin>
-          </plugins>
-        </pluginManagement>
         <plugins>
           <plugin>
             <artifactId>maven-site-plugin</artifactId>
@@ -679,16 +711,6 @@
           </plugin>
         </plugins>
       </build>
-
-      <reporting>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-site-plugin</artifactId>
-            <version>${maven-site-plugin.version}</version>
-          </plugin>
-        </plugins>
-      </reporting>
     </profile>
 
     <profile>
