--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
     <buildnumber-maven-plugin.version>1.2</buildnumber-maven-plugin.version>
     <cobertura-maven-plugin.version>2.6</cobertura-maven-plugin.version>
     <exec-maven-plugin.version>1.3</exec-maven-plugin.version>
-    <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
+    <jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
     <license-maven-plugin.version>1.6</license-maven-plugin.version>
     <templating-maven-plugin.version>1.0-alpha-3</templating-maven-plugin.version>
     <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
