--- a/pom.xml
+++ b/pom.xml
@@ -420,32 +420,6 @@
             <scmBranch>gh-pages</scmBranch>
           </configuration>
         </plugin>
-        
-        
-<!--         <plugin> -->
-<!--           <groupId>org.eclipse.m2e</groupId> -->
-<!--           <artifactId>lifecycle-mapping</artifactId> -->
-<!--           <version>1.0.0</version> -->
-<!--           <configuration> -->
-<!--             <lifecycleMappingMetadata> -->
-<!--               <pluginExecutions> -->
-<!--                 <pluginExecution> -->
-<!--                   <pluginExecutionFilter> -->
-<!--                     <groupId>org.apache.maven.plugins</groupId> -->
-<!--                     <artifactId>maven-enforcer-plugin</artifactId> -->
-<!--                     <versionRange>[1.3.1,)</versionRange> -->
-<!--                     <goals> -->
-<!--                       <goal>enforce</goal> -->
-<!--                     </goals> -->
-<!--                   </pluginExecutionFilter> -->
-<!--                   <action> -->
-<!--                     <ignore /> -->
-<!--                   </action> -->
-<!--                 </pluginExecution> -->
-<!--               </pluginExecutions> -->
-<!--             </lifecycleMappingMetadata> -->
-<!--           </configuration> -->
-<!--         </plugin> -->
       </plugins>
     </pluginManagement>
     <plugins>
@@ -661,12 +635,12 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
-        <version>2.0-rc1</version>
+        <version>2.0.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
-        <version>2.0-rc1</version>
+        <version>2.0.2</version>
       </dependency>
 
       <dependency>
