--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,7 @@
           <version>${maven-release-plugin.version}</version>
           <configuration>
             <goals>deploy site site:stage scm-publish:publish-scm</goals>
+            <autoVersionSubmodules>true</autoVersionSubmodules>
           </configuration>
         </plugin>
         <plugin>
