--- a/pom.xml
+++ b/pom.xml
@@ -601,6 +601,11 @@
         <version>1.9.5</version>
       </dependency>
       <dependency>
+        <groupId>org.jmockit</groupId>
+        <artifactId>jmockit</artifactId>
+        <version>1.16</version>
+      </dependency>
+      <dependency>
         <groupId>org.easytesting</groupId>
         <artifactId>fest-assert-core</artifactId>
         <version>2.0M10</version>
@@ -619,12 +624,12 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
-        <version>2.1</version>
+        <version>2.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
-        <version>2.1</version>
+        <version>2.2</version>
       </dependency>
 
       <dependency>
