--- a/pom.xml
+++ b/pom.xml
@@ -273,8 +273,11 @@
           <artifactId>maven-source-plugin</artifactId>
           <version>${maven-source-plugin.version}</version>
           <executions>
-            <!-- here we override the super-pom attach-sources execution id which calls sources:jar goal. That goals forks the lifecycle, 
-              causing the generate-sources phase to be called twice for the install goal. -->
+            <!-- 
+              ! here we override the super-pom attach-sources execution id which 
+              ! calls sources:jar goal. That goals forks the lifecycle, 
+              ! causing the generate-sources phase to be called twice for the install goal.
+            -->
             <execution>
               <id>attach-sources</id>
               <phase>DISABLE_FORKED_LIFECYCLE_MSOURCES-13</phase>
