--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
     <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
     <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
     <maven-changes-plugin.version>2.11</maven-changes-plugin.version>
-    <maven-checkstyle-plugin.version>2.15</maven-checkstyle-plugin.version>
+    <maven-checkstyle-plugin.version>2.16</maven-checkstyle-plugin.version>
     <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
-    <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
+    <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-ear-plugin.version>2.10.1</maven-ear-plugin.version>
@@ -70,28 +70,31 @@
     <maven-rar-plugin.version>2.4</maven-rar-plugin.version>
     <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
     <maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
-    <maven-pmd-plugin.version>3.5</maven-pmd-plugin.version>
+    <maven-pmd-plugin.version>3.6</maven-pmd-plugin.version>
     <maven-project-info-reports-plugin.version>2.8.1</maven-project-info-reports-plugin.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <maven-remote-resources-plugin.version>1.5</maven-remote-resources-plugin.version>
     <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
     <maven-scm-publish-plugin.version>1.1</maven-scm-publish-plugin.version>
-    <maven-shade-plugin.version>2.4</maven-shade-plugin.version>
-    <maven-source-plugin.version>2.4</maven-source-plugin.version>
+    <maven-shade-plugin.version>2.4.1</maven-shade-plugin.version>
+    <maven-source-plugin.version>3.0.0</maven-source-plugin.version>
     <maven-war-plugin.version>2.6</maven-war-plugin.version>
 
     <maven-site-plugin.version>3.4</maven-site-plugin.version>
 
     <!-- The following belong together -->
-    <maven-failsafe-plugin.version>2.18.1</maven-failsafe-plugin.version>
-    <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.18.1</maven-surefire-report-plugin.version>
+    <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
+    <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>2.19.1</maven-surefire-report-plugin.version>
 
+
+    <!-- Plugin for maven plugin development -->
+    <maven-plugin-plugin.version>3.4</maven-plugin-plugin.version>
 
     <!-- Codehaus Plugins -->
     <appassembler-maven-plugin.version>1.10</appassembler-maven-plugin.version>
-    <build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
-    <buildnumber-maven-plugin.version>1.3</buildnumber-maven-plugin.version>
+    <build-helper-maven-plugin.version>1.10</build-helper-maven-plugin.version>
+    <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
     <exec-maven-plugin.version>1.4.0</exec-maven-plugin.version>
     <findbugs-maven-plugin.version>2.5.5</findbugs-maven-plugin.version>
     <jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
@@ -370,6 +373,12 @@
           <version>${maven-checkstyle-plugin.version}</version>
         </plugin>
 
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-plugin-plugin</artifactId>
+          <version>${maven-plugin-plugin.version}</version>
+        </plugin>
+
         <!-- Codehaus Plugins -->
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -637,6 +646,15 @@
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <version>2.1.0</version>
+      </dependency>
+      <!--
+        ! Dependencies for maven-plugin
+        ! development.
+      -->
+      <dependency>
+        <groupId>org.apache.maven.plugin-tools</groupId>
+        <artifactId>maven-plugin-annotations</artifactId>
+        <version>3.4</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
