--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
     <!-- Plugin for maven plugin development -->
     <maven-plugin-plugin.version>3.4</maven-plugin-plugin.version>
 
-    <!-- Codehaus Plugins -->
+    <!-- MojoHaus Plugins (formerly Codehaus) -->
     <appassembler-maven-plugin.version>1.10</appassembler-maven-plugin.version>
     <build-helper-maven-plugin.version>1.10</build-helper-maven-plugin.version>
     <buildnumber-maven-plugin.version>1.4</buildnumber-maven-plugin.version>
@@ -298,6 +298,8 @@
               ! here we override the super-pom attach-sources execution id which 
               ! calls sources:jar goal. That goals forks the lifecycle, 
               ! causing the generate-sources phase to be called twice for the install goal.
+              ! Starting with Maven 3.4.0 (https://issues.apache.org/jira/browse/MNG-5940)
+              ! this is not needed anymore.
             -->
             <execution>
               <id>attach-sources</id>
